<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    tools:context="com.example.daniel.practica5.Turismo">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imagecharcos"
            android:layout_gravity="center"
            android:background="@drawable/charcos"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/TextCharcos"/>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imageestacion"
            android:layout_gravity="center"
            android:background="@drawable/estacion"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/TextMuseo"/>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imagelocomotora"
            android:layout_gravity="center"
            android:background="@drawable/locomotora"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textView3"
                android:text="@string/TextLocomotora"/>
        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imagemotorrodillo"
            android:layout_gravity="center"
            android:background="@drawable/motorrodillo"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textView4"
                android:text="@string/TextMotorrodillo"/>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
